--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-  <h1>Lets'a go to Super Mario World!!!</h1>
+  <h1>Lets'a go to Super Mario World!!! Let's Go!</h1>
 
   <div id="map"></div>
 
