--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="script.js"></script>
 
   <!-- Replace API_KEY and MAP_ID with your own ones -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGCneQLJ6xDwzAlckbx78W6kTKhM9QDIk&map_ids=225905c175fa3bcc&callback=initMap">
+  <script src="https://maps.googleapis.com/maps/api/js?key=&map_ids=225905c175fa3bcc&callback=initMap">
 </script>
 </body>
 </html>
